--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -9,11 +9,11 @@
     </div>
     <div class="album-cover-info">
         <div class="album-cover">
-            <img src=@Track.Cover>
+            <img src=@Track.Album.Cover>
         </div>
         <div class="album-info">
             <span>@Track.Title</span>
-            <a href="#">@Track.Author.Name</a>
+            <a href="#">@Track.Album.Artist.Name</a>
         </div>
     </div>
     <div class="album-name-link">
