--- a/MusicPlayer/Spotify/Pages/PlaylistPage.razor
+++ b/MusicPlayer/Spotify/Pages/PlaylistPage.razor
@@ -71,7 +71,7 @@
         {
             @foreach (var track in Tracks)
             {
-                <TrackRow Index="songNumber" Track="track"></TrackRow>
+                <TrackRow Index="songNumber" Id=@track.Id></TrackRow>
                 songNumber++;
             }
         }
@@ -86,22 +86,26 @@
 
     public List<TrackModel>? Tracks { get; set; }
 
+    int songNumber = 1;
+
     protected override void OnInitialized()
     {
         using (var db = new PlayerContext())
         {
             Playlist = db.Playlists
                         .Include(p => p.User)
+                        .Include(p => p.PlaylistTrack)
+                            .ThenInclude(pt => pt.Track)
                         .FirstOrDefault(p => p.Id == Id);
 
-            Tracks = db.Tracks
-                        .Include(t => t.PlaylistTrack)
-                            .ThenInclude(p => p!.Playlist)
-                        .Where(t => t.Id == t.PlaylistTrack!.TrackId && t.PlaylistTrack.PlaylistId == Id)
-                        .ToList();
+            if (Playlist is not null)
+            {
+                Tracks = (from t in db.Tracks
+                          from pt in db.PlaylistTracks
+                          where t.Id == pt.TrackId
+                          where pt.PlaylistId == Playlist.Id
+                          select t).ToList();
+            }
         }
     }
-
-    int songNumber = 1;
-
 }
