changed track to nullable

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -47,7 +47,7 @@
     [Parameter]
     public Guid Id { get; set; }
 
-    public TrackModel Track { get; set; }
+    public TrackModel? Track { get; set; }
 
     [CascadingParameter]
     public MainLayout Layout { get; set; }
