--- a/MusicPlayer/Spotify/Pages/Items/AlbumCard.razor
+++ b/MusicPlayer/Spotify/Pages/Items/AlbumCard.razor
@@ -5,9 +5,9 @@
 <div @ref=Card class="card" @onclick="OpenAlbumPage">
     <div class="image-area">
         <div class="image">
-            @if (!String.IsNullOrEmpty(Album.Cover))
+            @if (!String.IsNullOrEmpty(Album.Image))
             {
-                <img src="data:image/png;base64,@Album.Cover" />
+                <img src="data:image/png;base64,@Album.Image" />
             }
             else
             {
