--- a/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
@@ -113,6 +113,10 @@
     overflow: hidden;
 }
 
+.author:hover {
+    text-decoration: underline;
+}
+
 .card:hover .play-button {
     bottom: 15px;
     opacity: 1;
