--- a/MusicPlayer/Spotify/Pages/AlbumPage.razor.css
+++ b/MusicPlayer/Spotify/Pages/AlbumPage.razor.css
@@ -12,32 +12,33 @@
     border-radius: 10px;
 }
 
-.playlist-info-area {
+.album-info-area {
     display: flex;
     flex-direction: row;
     padding: 24px;
-    padding-top: 0px;
+    padding-top: 45px;
     height: 30vh;
     max-height: 400px;
     min-height: 340px;
     border-radius: 10px 10px 0 0;
     background-color: #1a1a1a;
+    box-sizing: border-box;
 }
 
-.playlist-info {
+.album-info {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     width: 100%;
 }
 
-.playlist-cover {
+.album-cover {
     display: flex;
     align-items: flex-end;
     margin-right: 16px;
 }
 
-    .playlist-cover img {
+    .album-cover img {
         max-width: 270px;
         min-width: 135px;
         max-height: 270px;
@@ -45,32 +46,40 @@
         width: 100%;
     }
 
-.playlist-type {
+.album-type {
     font-family: DmSans, sans-serif;
     font-size: 16px;
     color: #ffffff;
 }
 
-.playlist-name {
+.album-name-area {
     margin-top: 8px;
     margin-bottom: 12px;
     font-family: DmSans, sans-serif;
-    font-size: 32px;
+    font-size: 22px;
     color: #ffffff;
+    overflow: hidden;
 }
 
-    .playlist-name h1 {
+    .album-name-area .album-name {
         margin: 0;
         width: 100%;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
     }
 
-.playlist-authors {
+.album-authors {
     font-family: DmSans, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     color: #ffffffb2;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
 }
 
-.playlist-duration {
+.album-duration {
     display: flex;
     align-items: center;
     margin-top: 8px;
