--- a/MusicPlayer/Spotify/Pages/PlaylistPage.razor
+++ b/MusicPlayer/Spotify/Pages/PlaylistPage.razor
@@ -17,9 +17,8 @@
             <div class="playlist-type">
                 <span>Playlist</span>
             </div>
-            <div class="playlist-name">
-
-                <h1>@Playlist?.Title</h1>
+            <div class="playlist-name-area">
+                <h1 class="playlist-name">@Playlist?.Title</h1>
             </div>
             <div class="playlist-authors">
                 @Playlist?.User.Name
