--- a/MusicPlayer/Spotify/Pages/Index.razor.css
+++ b/MusicPlayer/Spotify/Pages/Index.razor.css
@@ -1,8 +1,17 @@
-﻿.tracks-area {
+﻿.main-area {
+    display: flex;
+    flex: 1;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
+    padding-top: 64px;
+    box-sizing: border-box;
+}
+
+.tracks-area {
     background: #121212;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
 }
 
     .tracks-area a {
@@ -27,7 +36,28 @@
 }
 
 .albums-area {
+
 }
 
 .playlist-area {
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: var(--var1);
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #898889;
+        transition: 0.5s;
+    }
+
+@property --var1 {
+    syntax: "<color>";
+    inherits: true;
+    initial-value: transparent;
 }
